[project]
name = "zeno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Agero19", email = "pmotulko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
zeno = "zeno:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
